--- a/index.html
+++ b/index.html
@@ -107,98 +107,139 @@
     <!-- home end below -->
     </div>
     <!-- services -->
-    <div class="services">
+    <div class="service contain" id="serviceScroll">
+    <div class="divider"></div>
+    <div class="visual">
+      <h2>Service</h2>
+      <div class="services">
 
 
-    <div class="accordion" id="accordionExample">
-     <div class="logo card">
-       <div class="logo card-header" id="headingOne">
-         <h2 class="mb-0">
-           <button class="logo btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
-             aria-expanded="false" aria-controls="collapseOne">
-             LOGO
-           </button>
-         </h2>
-       </div>
+      <div class="accordion h-100" id="accordionExample">
+       <div class="logo card">
+         <div class="logo card-header" id="headingOne">
+           <h2 class="mb-0">
+             <button class="logo btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+               aria-expanded="false" aria-controls="collapseOne">
+               LOGO
+             </button>
+           </h2>
+         </div>
 
-       <div id="collapseOne" class="collapse collapsing" aria-labelledby="headingOne" data-parent="#accordionExample">
-         <div class="card-body"><div class="image1">
+         <div id="collapseOne" class="collapse collapsing" aria-labelledby="headingOne" data-parent="#accordionExample">
+           <div class="card-body"><div class="image1">
 
 
-           <img class="w-25" src="images\F7FDA338.jpg" alt="">
-           <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
-           officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
-           moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
-           keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
-           butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
-           haven't heard of them accusamus labore sustainable VHS.</p>
+             <img class="w-25 align" src="images\F7FDA338.jpg" alt="">
 
+             <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
+             officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
+             moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+             keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+             butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
+             haven't heard of them accusamus labore sustainable VHS.</p>
+
+            </div>
           </div>
-        </div>
-       </div>
-     </div>
-     <div class="web card">
-       <div class="card-header" id="headingTwo">
-         <h2 class="mb-0">
-           <button class="web btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
-             aria-expanded="false" aria-controls="collapseTwo">
-             WEB
-           </button>
-         </h2>
-       </div>
-       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-         <div class="card-body">
-           Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
-           officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
-           moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
-           keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
-           butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
-           haven't heard of them accusamus labore sustainable VHS.
          </div>
        </div>
-     </div>
-     <div class="bcard card">
-       <div class="card-header" id="headingThree">
-         <h2 class="mb-0">
-           <button class="bcard btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
-             aria-expanded="false" aria-controls="collapseThree">
-             CARD
-           </button>
-         </h2>
-       </div>
-       <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-         <div class="card-body">
-           Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
-           officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
-           moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
-           keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
-           butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
-           haven't heard of them accusamus labore sustainable VHS.
+       <div class="web card">
+         <div class="card-header" id="headingTwo">
+           <h2 class="mb-0">
+             <button class="web btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
+               aria-expanded="false" aria-controls="collapseTwo">
+               WEB
+             </button>
+           </h2>
+         </div>
+         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+           <div class="card-body">
+             <img class="w-25 align" src="images\web design.jpg" alt="">
+
+             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
+             officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
+             moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+             keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+             butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
+             haven't heard of them accusamus labore sustainable VHS.
+           </div>
          </div>
        </div>
-     </div>
-     <div class="brand card">
-       <div class="card-header" id="headingThree">
-         <h2 class="mb-0">
-           <button class="brand btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapsefour"
-             aria-expanded="true" aria-controls="collapsefour">
-             Brand
-           </button>
-         </h2>
-       </div>
-       <div id="collapsefour" class="collapse show" aria-labelledby="headingThree" data-parent="#accordionExample">
-         <div class="card-body">
-           Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
-           officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
-           moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
-           keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
-           butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
-           haven't heard of them accusamus labore sustainable VHS.
+       <div class="bcard card">
+         <div class="card-header" id="headingThree">
+           <h2 class="mb-0">
+             <button class="bcard btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
+               aria-expanded="false" aria-controls="collapseThree">
+               CARD
+             </button>
+           </h2>
+         </div>
+         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+           <div class="card-body">
+             <img class="w-25 align" src="images\business card.jpeg" alt="">
+             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
+             officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
+             moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+             keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+             butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
+             haven't heard of them accusamus labore sustainable VHS.
+           </div>
          </div>
        </div>
+       <div class="brand card">
+         <div class="card-header" id="headingThree">
+           <h2 class="mb-0">
+             <button class="brand btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapsefour"
+               aria-expanded="true" aria-controls="collapsefour">
+               Brand
+             </button>
+           </h2>
+         </div>
+         <div id="collapsefour" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+           <div class="card-body">
+              <img class="w-25 align" src="images\branding.jpeg" alt="">
+             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
+             officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
+             moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+             keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+             butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
+             haven't heard of them accusamus labore sustainable VHS.
+           </div>
+         </div>
+         <div class="app card">
+           <div class="card-header" id="headingThree">
+             <h2 class="mb-0">
+               <button class="app btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapsefive"
+                 aria-expanded="true" aria-controls="collapsefour">
+                 App Development
+               </button>
+             </h2>
+           </div>
+           <div id="collapsefive" class="collapse show" aria-labelledby="headingfour" data-parent="#accordionExample">
+             <div class="card-body">
+                <img class="w-25 align" src="images\app dev.jpeg" alt="">
+               Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon
+               officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
+               moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+               keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
+               butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably
+               haven't heard of them accusamus labore sustainable VHS.
+             </div>
+           </div>
+       </div>
      </div>
-   </div>
+    </div>
+      <!-- visual end below -->
+    </div>
+    <!-- service end below -->
   </div>
+  <!-- Product Section -->
+  <div class="product contain" id="productScroll">
+    <div class="divider"></div>
+    <div class="visual" id="productHtml">
+
+      <!-- visual end below -->
+    </div>
+
       <!-- visual end below -->
 
       <!-- service end below -->
@@ -323,7 +364,7 @@
       <!-- footer -->
       <footer class="w-100">
         <div class="car  h-50 card" >
-  <img src="images\nnn.png" class="card-img-top" alt="...">
+  <img src="images\School of Media and Design in White_(Digital)_Sub-Brand Logotypes\SOMD_WHITE-Locked-Horizontal.png" class="card-img-top" alt="...">
   <div class="card-body">
   <h4 class="car-text">  copyrighted by Paul, Carla, Nelvin, Tim</h4></div>
 </div>
