--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
       <div class="services">
 
       <div class="accordion w-100" id="accordionExample">
-       <div class="logo card">
-         <div class="logo card-header" id="headingOne">
+       <div class="logo1 card">
+         <div class="logo1 card-header" id="headingOne">
            <h2 class="mb-0">
-             <button class="logo btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne"
+             <button class="logo1 btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne"
                aria-expanded="false" aria-controls="collapseOne">
                LOGO
              </button>
@@ -100,11 +100,11 @@
          </div>
 
          <div id="collapseOne" class="collapse collapsing w-50" aria-labelledby="headingOne" data-parent="#accordionExample">
-           <div class="card-body"><div class="image1">
+           <div class="card-body1"><div class="image1">
 
 
              <img class="w-100 align" src="images\F7FDA338.jpg" alt="">
-             <br><br>
+             <br><br><br><br><br>
              <h2>Logo Designing</h2>
 
              <p>A simple logo design
@@ -120,7 +120,7 @@
           </div>
          </div>
        </div>
-       <div class="web card">
+       <div class="web1 card">
          <div class="card-header" id="headingTwo">
            <h2 class="mb-0">
              <button class="web btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
@@ -130,10 +130,10 @@
            </h2>
          </div>
          <div id="collapseTwo" class="collapse w-50" aria-labelledby="headingTwo" data-parent="#accordionExample">
-           <div class="card-body">
+           <div class="card-body1">
              <img class="w-100 align" src="images\web design.jpg" alt="">
-             <br><br>
-             <h2>Logo Designing</h2>
+             <br><br><br><br><br>
+             <h2>Web Designing</h2>
 
              <p>A website is also important because it helps you establish credibility as a business.
                Most people just assume that you have a website since the vast majority of businesses do,
@@ -147,7 +147,7 @@
            </div>
          </div>
        </div>
-       <div class="bcard card ">
+       <div class="bcard1 card ">
          <div class="card-header" id="headingThree">
            <h2 class="mb-0">
              <button class="bcard btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
@@ -157,10 +157,10 @@
            </h2>
          </div>
          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-           <div class="card-body">
+           <div class="card-body1">
              <img class="w-50 align" src="images\business card.jpeg" alt="">
-             <br><br>
-             <h2>Logo Designing</h2>
+             <br><br><br><br><br>
+             <h2>Business Card</h2>
 
              <p>As business cards are part of an introduction, they are important for making a favorable first impression. ... Business cards can also enhance credibility,
                 as they can create a sense of professionalism and legitimacy for your business.</p>
@@ -173,7 +173,7 @@
            </div>
          </div>
        </div>
-       <div class="brand card">
+       <div class="brand1 card">
          <div class="card-header" id="headingThree">
            <h2 class="mb-0">
              <button class="brand btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapsefour"
@@ -183,9 +183,9 @@
            </h2>
          </div>
          <div id="collapsefour" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-           <div class="card-body">
+           <div class="card-body1">
               <img class="w-25 align" src="images\branding.jpeg" alt="">
-              <br><br>
+            <br><br><br><br><br>
               <h2>Branding</h2>
 
               <p>A brand is an overall experience of a customer that distinguishes
@@ -209,9 +209,9 @@
              </h2>
            </div>
            <div id="collapsefive" class="collapse show" aria-labelledby="headingfour" data-parent="#accordionExample">
-             <div class="card-body">
+             <div class="card-body1">
                 <img class="w-50 align" src="images\app dev.jpeg" alt="">
-                <br><br>
+                <br><br><br><br><br>
                 <h2>App Development</h2>
 
                 <p> App development is the act or process by which a mobile app is developed for mobile
