--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
       <h2>Service</h2>
       <div class="services">
 
-      <div class="accordion w-100" id="accordionExample">
+      <div class="accr w-100" id="accordionExample">
        <div class="logo-ss card">
-         <div class="logo-ss card-header h-100" id="headingOne">
+         <div class="logo-ss card-header-n" id="headingOne">
            <h2 class="mb-0">
-             <button class="logo btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne"
+             <button class="logo btnn collapsed" type="button" data-toggle="collapse" data-target="#collapseOne"
                aria-expanded="false" aria-controls="collapseOne">
                LOGO
              </button>
@@ -126,7 +126,7 @@
          </div>
 
          <div id="collapseOne" class="collapse collapsing w-50" aria-labelledby="headingOne" data-parent="#accordionExample">
-           <div class="card-body same">
+           <div class="same body">
 
 
              <img class="w-100 align" src="images\F7FDA338.jpg" alt="">
@@ -146,16 +146,16 @@
          </div>
        </div>
        <div class="web-ss card">
-         <div class="card-header h-100" id="headingTwo">
+         <div class="card-header-n" id="headingTwo">
            <h2 class="mb-0">
-             <button class="web-ss btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
+             <button class="web-ss btnn collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
                aria-expanded="false" aria-controls="collapseTwo">
                WEB
              </button>
            </h2>
          </div>
          <div id="collapseTwo" class="collapse w-50" aria-labelledby="headingTwo" data-parent="#accordionExample">
-           <div class="card-body same">
+           <div class="body same">
              <img class="w-100 align" src="images\web design.jpg" alt="">
              <br><br>
              <h2 class="word">Web Designing</h2>
@@ -173,16 +173,16 @@
          </div>
        </div>
        <div class="bcard-ss card ">
-         <div class="card-header h-100" id="headingThree">
+         <div class="card-header-n" id="headingThree">
            <h2 class="mb-0">
-             <button class="bcard-ss btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
+             <button class="bcard-ss btnn collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
                aria-expanded="false" aria-controls="collapseThree">
                CARD
              </button>
            </h2>
          </div>
          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-           <div class="card-body same">
+           <div class="body same">
              <img class="w-50 align" src="images\business card.jpeg" alt="">
              <br><br>
              <h2 class="word">Business card Designing</h2>
@@ -199,9 +199,9 @@
          </div>
        </div>
        <div class="brand-ss card">
-         <div class="card-header" id="headingThree">
+         <div class="card-header-n"  id="headingThree">
            <h2 class="mb-0">
-             <button class="brand-ss btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapsefour"
+             <button class="brand-ss btnn collapsed" type="button" data-toggle="collapse" data-target="#collapsefour"
                aria-expanded="true" aria-controls="collapsefour">
                Brand
              </button>
@@ -225,16 +225,16 @@
            </div>
          </div>
           <div class="app-ss card" >
-           <div class="card-header" id="headingThree">
+           <div class="card-header-n" id="headingThree">
              <h2 class="mb-0">
-               <button class="app-ss btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapsefive"
+               <button class="app-ss btnn collapsed" type="button" data-toggle="collapse" data-target="#collapsefive"
                  aria-expanded="true" aria-controls="collapsefour">
                  App Development
                </button>
              </h2>
            </div>
            <div id="collapsefive" class="collapse show" aria-labelledby="headingfour" data-parent="#accordionExample">
-             <div class="card-body same">
+             <div class="body same">
                 <img class="w-50 align" src="images\app dev.jpeg" alt="">
                 <br><br>
                 <h2 class="word">App Development</h2>
@@ -262,19 +262,6 @@
 
     <!-- service end below -->
   </div>
-  <!-- Product Section -->
-  <div class="product contain" id="productScroll">
-    <div class="divider"></div>
-    <div class="visual" id="productHtml">
-
-      <!-- visual end below -->
-    </div>
-
-      <!-- visual end below -->
-
-      <!-- service end below -->
-
-
     <!-- products -->
     <div class="product contain">
         <div class="divider"></div>
@@ -391,35 +378,29 @@
         </div>
           <!-- contact end below -->
     </div>
-      <!-- footer -->
-      <!-- <footer class="w-100">
-        <div class="card mb-3">
-    <img src="images\School of Media and Design in White_(Digital)_Sub-Brand Logotypes\SOMD_WHITE-Locked-Horizontal.png" class="card-img-top" alt="...">
-    <div class="card-bod">
-      <p class="card-text">Copyright:2019 Apricot Media(PAUL,CARLA,TIM,NELVN)</p>
+    <div class="footer">Copyright:2019 Apricot Media</div>
+   </div>
+   <script
+     src="https://code.jquery.com/jquery-4.3.1.slim.min.js"
+     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+     crossorigin="anonymous"
+   ></script>
+   <script
+     src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+     crossorigin="anonymous"
+   ></script>
+   <script
+     src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+     crossorigin="anonymous"
+   ></script>
 
-    </div>
-  </div>
+   <!-- bootstrap -->
 
-
-      </footer> -->
+   <!-- js file -->
+   <script src="js/min/main.min.js"></script>
   </body>
   <!-- bootstrap -->
-  <script
-    src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"
-  ></script>
-  <!-- js file -->
-  <script src="js/min/main.min.js"></script>
+
 </html>
