--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="services">
 
       <div class="accr w-100" id="accordionExample">
-       <div class="logo-ss card">
+       <div class="logo-ss cas">
          <div class="logo-ss card-header-n" id="headingOne">
            <h2 class="mb-0">
              <button class="logo btnn collapsed" type="button" data-toggle="collapse" data-target="#collapseOne"
@@ -120,7 +120,7 @@
           </div>
          </div>
        </div>
-       <div class="web-ss card">
+       <div class="web-ss cas">
          <div class="card-header-n" id="headingTwo">
            <h2 class="mb-0">
              <button class="web-ss btnn collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
@@ -147,7 +147,7 @@
            </div>
          </div>
        </div>
-       <div class="bcard-ss card ">
+       <div class="bcard-ss cas">
          <div class="card-header-n" id="headingThree">
            <h2 class="mb-0">
              <button class="bcard-ss btnn collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
@@ -173,7 +173,7 @@
            </div>
          </div>
        </div>
-       <div class="brand-ss card">
+       <div class="brand-ss cas">
          <div class="card-header-n"  id="headingThree">
            <h2 class="mb-0">
              <button class="brand-ss btnn collapsed" type="button" data-toggle="collapse" data-target="#collapsefour"
@@ -199,7 +199,7 @@
 
            </div>
          </div>
-          <div class="app-ss card" >
+          <div class="app-ss cas" >
            <div class="card-header-n" id="headingThree">
              <h2 class="mb-0">
                <button class="app-ss btnn collapsed" type="button" data-toggle="collapse" data-target="#collapsefive"
