--- a/home.html
+++ b/home.html
@@ -82,14 +82,12 @@
     <div class="about">
       <h3>Welcome!</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus provident
-        eos nemo necessitatibus, molestiae quasi quaerat voluptatum! Sunt porro
-        odio fugiat, atque totam reiciendis esse vel mollitia eveniet
-        consequatur at! <br />
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus provident
-        eos nemo necessitatibus, molestiae quasi quaerat voluptatum! Sunt porro
-        odio fugiat, atque totam reiciendis esse vel mollitia eveniet
-        consequatur at!
+        The Student Design Portal is student-based creative agency that is all
+        about meeting your needs. Students from a variety of design programs at
+        Algonquin College work hard to produce affordable digital solutions,
+        branding strategies and web design since. Our students are highly
+        creative and are eager to explore new ideas (and challenges!) to your
+        vision become a reality.
       </p>
       <img src="/img/swoosh.png" alt="" />
     </div>
