update service section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
     <div class="service contain" id="serviceScroll">
       <div class="divider"></div>
-      <div class="visual">
+      <div class="visual" id="serviceHtml">
         <h2>Service</h2>
         <!-- visual end below -->
       </div>
