--- a/service.html
+++ b/service.html
@@ -1,5 +1,5 @@
 <h2>Service</h2>
-     <div class="services">
+     <div class="services w-100">
 
        <div class="accr w-100" id="accordionExample">
         <div class="logo-ss cas">
