--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
         <!-- contact end below -->
       </div>
       <!-- footer -->
-      <div class="footer">Copyright:2019 Apricot Media</div>
+      <div class="footer w-100 h-50">
+<img class="footimg w-25" src="images\School of Media and Design in White_(Digital)_Sub-Brand Logotypes\SOMD_WHITE-Locked-Horizontal.png" alt="">
+        <br><br><br /><p>Copyright:2019 Apricot Media </p></div>
     </div>
     <script
       src="https://code.jquery.com/jquery-4.3.1.slim.min.js"
